microservices/user/deployment/prod/app/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: user
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ghcr.io/alexandr-io/backend/user:latest
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: user
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
    - name: grpc
      port: 5051
      protocol: TCP
      targetPort: 5051
