microservices/user/deployment/prod/app/Ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: user
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`user.alexandrio.cloud`)
      kind: Rule
      services:
        - name: api
          port: 80
  tls:
    certResolver: myresolver
